# Open-Download-Manager

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/download/: chunk.rs  mod.rs  scheduler.rs
src-tauri/src/http/: mod.rs
src-tauri/src/storage/: mod.rs
src/components/: AddUrlDialog.tsx  ContextMenu.tsx  DownloadCompletePopup.tsx  DownloadList.tsx  ProgressDialog.tsx  Sidebar.tsx  StatusBar.tsx  Toolbar.tsx
src/stores/: downloadStore.ts
src/types/: download.ts
